k8s/policies/gatekeeper/templates/k8s-disallow-default-sa-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowdefaultsa
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowDefaultSA
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowdefaultsa
      
      violation[{"msg": msg}] {
        input.review.kind.kind == "Pod"
        not input.review.object.spec.serviceAccountName
        msg := "Pods must specify a non-default service account"
      }

      violation[{"msg": msg}] {
        input.review.kind.kind == "Pod"
        input.review.object.spec.serviceAccountName == "default"
        msg := "Usage of the default service account is not allowed"
      }
