k8s/policies/gatekeeper/templates/restrict-secret-access-rbac-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srestrictsecretaccessrbac
spec:
  crd:
    spec:
      names:
        kind: K8sRestrictSecretAccessRBAC
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srestrictsecretaccessrbac

is_rbac {
    input.review.kind.kind == "Role"
}

is_rbac {
    input.review.kind.kind == "ClusterRole"
}

violation[{"msg": msg}] {

    is_rbac

    rule := input.review.object.rules[_]

    rule.resources[_] == "secrets"

    verb := rule.verbs[_]

    verb == "get"  ||
    verb == "list" ||
    verb == "watch"||
    verb == "*"

    msg := sprintf(
        "%v %v may access Kubernetes Secrets",
        [
            input.review.kind.kind,
            input.review.object.metadata.name
        ]
    )
}

violation[{"msg": msg}] {

    is_rbac

    rule := input.review.object.rules[_]

    rule.resources[_] == "*"

    msg := sprintf(
        "%v %v uses wildcard resources",
        [
            input.review.kind.kind,
            input.review.object.metadata.name
        ]
    )
}
